drumkv1 - an old-school drum-kit sampler
----------------------------------------

ChangeLog

SVN TRUNK

- Moog-like 24dB/oct resonant filter slight modification.
- Fixed JACK client fail/fake initialization.
- Fixed a current element switching bug (via GUI) which was confusing
  the (stereo)width, panning and volume settings effect from previous
  selected elements. (TESTING)
- Fixed LV2 .ttl file index order (re. GEN1_GROUP, GEN1_COARSE).


0.3.2  2012-03-01  One third bug-fix release.

- Pitch-bend, Modwheel and LFO Pitch range internal fixes.
- LV2 State save flags now forced to be portable POD.
- Color palette hack on Qt5 dark themes. (TESTING)


0.3.1  2012-02-08  One second bug-fix release.

- Improved filters parameter sensitivity (cutoff, reso).
- Envelope generators stage curves now gone a little more old-
  schooler and analog-like, hopefully improving on the punchy
  and click-less sound front.
- Experimental LV2 Time designated port support (Delay BPM). 
- Preparations for Qt5 migration.


0.3.0  2012-12-21  Third coming release.

- Dropped all SSE dummy build optimization flags as they were
  making more harm than real good, performance wise.
- GUI layout moved from a toolbox into a stacked tab widget;
  also, a status-bar has been added at the bottom display.
- LV2 Atom/MIDI event processing is now official, a replacement
  for the formerly deprecated LV2 Event/MIDI specification.
- Added dirty checking also on switching from unamed presets.
- JACK stand-alone: preset loader initialization fix.


0.2.0  2012-11-22  Second public release.

- Exclusive element sounding group setting added (eg. hi-hats).
- Parameters A/B comparison toggle buttons have been added.
- Keep LV2 event buffer valid on each run(), as found for strict
  LV2 specification and compliance (as suggested by falkTX).
- Increased polyphony baseline from 24 to 32 voices.
- Prepared for relative paths from preset file references.