@@ -20,7 +20,8 @@
 	lv2:requiredFeature <http://lv2plug.in/ns/ext/urid#map> ;
 	lv2:optionalFeature lv2:hardRTCapable ;
 	lv2:extensionData <http://lv2plug.in/ns/ext/state#interface> ;
-	lv2ui:ui <http://drumkv1.sourceforge.net/lv2#ui> ;
+	lv2ui:ui <http://drumkv1.sourceforge.net/lv2#ui> ,
+			 <http://drumkv1.sourceforge.net/lv2#ui_external> ;
 	lv2:port [
 		a lv2:InputPort, lv2atom:AtomPort ;
 		lv2atom:bufferType lv2atom:Sequence ;
@@ -553,6 +554,11 @@
 
 <http://drumkv1.sourceforge.net/lv2#ui>
 	a lv2ui:Qt4UI ;
+	lv2:requiredFeature <http://lv2plug.in/ns/ext/instance-access> ;
+	lv2ui:binary <drumkv1.so> .
+
+<http://drumkv1.sourceforge.net/lv2#ui_external>
+	a <http://lv2plug.in/ns/extensions/ui#external> ;
 	lv2:requiredFeature <http://lv2plug.in/ns/ext/instance-access> ;
 	lv2ui:binary <drumkv1.so> .
 
