@@ -5,6 +5,7 @@ ChangeLog
 
 SVN TRUNK
 
+- First attempt for LV2 External UI support. (EXPERIMENTAL)
 - Moog-like 24dB/oct resonant filter slight modification.
 - Fixed JACK client fail/fake initialization.
 - Fixed a current element switching bug (via GUI) which was confusing
